[project]
authors = [{ name = "SoulMelody", email = "yjxrtzyx@gmail.com" }]
license-files = ["LICENSE*"]
requires-python = ">=3.10,<3.15"
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Intended Audience :: Developers',
  'Intended Audience :: End Users/Desktop',
  'License :: OSI Approved :: MIT License',
  'Environment :: Console',
  'Operating System :: Unix',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows :: Windows 11',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Android',
  'Framework :: Pydantic :: 2',
  'Topic :: File Formats',
  'Topic :: Multimedia :: Sound/Audio :: Sound Synthesis',
  'Typing :: Typed',
]
dependencies = [
  "bidict<0.23.2,>=0.23.1",
  "charset-normalizer<4.0.0,>=3.4.4",
  "construct",
  "construct-typing<1.0.0,>=0.6.2",
  "importlib-resources<7.0.0,>=6.5.2; python_version < \"3.11\"",
  "jinja2<4.0.0,>=3.1.6",
  "jyutping",
  "ko-pron>=1.3",
  "loguru<1.0.0,>=0.7.3",
  "more-itertools<11.0.0,>=10.8.0",
  "packaging<25.1,>=25.0",
  "platformdirs<5.0.0,>=4.5.0",
  "portion<3.0.0,>=2.6.1",
  "proto-plus<2.0.0,>=1.26.1",
  "pydantic<3.0.0,>=2.12.1",
  "pydantic-extra-types<3.0.0,>=2.10.6",
  "pydantic-settings<3.0.0,>=2.11.0",
  "pymediainfo<=7.0.1; sys_platform != \"emscripten\"",
  "pypinyin<1.0.0,>=0.55.0",
  "pysubs2<2.0.0,>=1.8.0",
  "PyYAML>=6.0.3,<7.0.0; python_version!='3.13' or sys_platform == \"emscripten\"",
  "PyYAML-ft>=8.0.0,<8.0.1; python_version=='3.13' and sys_platform != \"emscripten\"",
  "retrie<1.0.0,>=0.3.1",
  "rich<14.2.1,>=14.2.0",
  "svg-py<2.0.0,>=1.9.1",
  "tatsu-lts<6.0.0,>=5.13.2",
  "typer-slim<1.0.0,>=0.19.2",
  "universal-pathlib<1.0.0,>=0.3.3",
  "wanakana-python",
  "xsdata-pydantic<24.6,>=24.5",
  "zhon<3.0.0,>=2.1.1",
]
name = "libresvip"
dynamic = ["readme", "version"]
description = "Universal Converter for Singing Voice Projects"

[project.urls]
repository = "https://github.com/SoulMelody/LibreSVIP"
documentation = "https://soulmelody.github.io/LibreSVIP"

[project.optional-dependencies]
zstd = [
  "backports.zstd<1.0.1,>=1.0.0; (sys_platform == \"win32\" or sys_platform == \"darwin\" or sys_platform == \"linux\") and (platform_python_implementation == \"CPython\" or platform_python_implementation == \"PyPy\") and python_version < \"3.14\"",
  "zstandard<0.25.1,>=0.25.0; (sys_platform != \"win32\" and sys_platform != \"darwin\" and sys_platform != \"linux\") and platform_python_implementation == \"CPython\" and python_version < \"3.14\"",
]
crypto = [
  "cffi>=2.0.0; platform_python_implementation != \"PyPy\" and (sys_platform != \"win32\" or python_version <= \"3.11\")",
  "pyzipper>=0.3.6",
]
ujson = ["ujson>=5.11.0"]
ruamel_yaml = [
  "ruamel.yaml>=0.18.15",
]
lxml = ["lxml>=6.0.2"]
tui = [
  "textual-fspicker>=0.6.0",
]
webui = [
  "nicegui>=3.0.4",
]
mobile = [
  "flet[cli,desktop]>=0.28.3,<0.29.0",
  "flet-permission-handler>=0.1.0",
]
desktop = [
  "pyside6<6.11.0,>=6.10.0",
  "fonticon-materialdesignicons7>=7.2.96",
  "httpx>=0.28.1",
  "desktop-notifier>=6.2.0; platform_python_implementation == \"CPython\"",
]

[dependency-groups]
code_gen = [
  "datamodel-code-generator>=0.35.0",
  "gapic-generator>=1.28.0",
  "protoc-wheel-0>=30.2",
  "xsdata[cli]>=25.7",
]
i18n = ["babel>=2.17.0"]
linting = [
  "pre-commit>=4.3.0",
  "ruff>=0.14.0",
  "mypy>=1.18.2",
  "sourcery>=1.37.0",
  "proto-plus-stubs>=0.7.0",
  "pyrefly>=0.37.0",
  "types-lxml>=2025.8.25",
  "types-pyyaml>=6.0.12.20250915",
  "types-ujson>=5.10.0.20250822",
  "types-pyinstaller>=6.16.0.20250918",
  "sortedcontainers-stubs>=2.4.3",
]
packaging = [
  "cx-Freeze>=8.4.1",
  "nuitka>=2.8.1",
  "pyfuze>=2.7.2",
  "pyinstaller>=6.16.0",
  "shellingham<2.0.0,>=1.5.4",
]
docs = [
  "mkdocs-material<10.0.0,>=9.6.21",
]
test = ["pytest>=8.4.2", "pytest-datadir>=1.8.0", "textual-dev>=1.8.0"]
all = [
  {include-group = "code_gen"},
  {include-group = "i18n"},
  {include-group = "linting"},
  {include-group = "packaging"},
  {include-group = "docs"},
  {include-group = "test"}
]

[project.scripts]
libresvip-cli = "libresvip.cli.__main__:app"
libresvip-tui = "libresvip.tui.__main__:main"
libresvip-web = "libresvip.web.__main__:main"

[project.gui-scripts]
libresvip-gui = "libresvip.gui.__main__:run"
libresvip-mobile = "libresvip.mobile.__main__:main"

[project.entry-points.pyinstaller40]
hook-dirs = "libresvip.__pyinstaller:get_hook_dirs"

[tool.uv.sources]
construct = { url = "https://www.piwheels.org/simple/construct/construct-2.10.68-py3-none-any.whl" }
jyutping = { url = "https://archive1.piwheels.org/simple/jyutping/jyutping-0.3.4-py2.py3-none-any.whl" }
wanakana-python = { url = "https://archive1.piwheels.org/simple/wanakana-python/wanakana_python-1.2.2-py3-none-any.whl" }

[tool.hatch.version]
path = "libresvip/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = [
  "libresvip",
]

[tool.hatch.build.targets.wheel]
packages = ["libresvip"]
exclude = [
  "*.po",
  "*.ts",
  "tests",
  "libresvip/res/qml/**",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
pythonpath = "."
testpaths = "tests"

[tool.ruff]
target-version = "py310"
src = ['libresvip', 'tests']
line-length = 100
fix = true

[tool.ruff.lint]
select = [
  "A",     # builtins
  "ANN",   # annotations
  "ASYNC", # async
  "C4",    # comprehensions
  "DTZ",   # timezone
  "E",     # style errors
  "EM",    # error messages
  "EXE",   # executable
  "F",     # flakes
  "FA",    # future annotations
  "FLY",   # flynt
  "I",     # import sorting
  "ICN",   # import conventions
  "INT",   # gettext
  "ISC",   # implicit str concat
  "N",     # naming
  "PERF",  # perflint
  "PIE",   # assign and return
  "PGH",   # pygrep-hooks
  "PLC",   # pylint convention
  "PLE",   # pylint errors
  "PT",    # pytest-style
  "PTH",   # pathlib
  "PYI",   # stubs
  "Q",     # quotes
  "RUF",   # ruff
  "RSE",   # raise
  "SIM",   # simplify
  "T10",   # debugger
  "T20",   # print
  "TC",    # type-checking
  "TID",   # tidy imports
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # style warnings
  "YTT",   # sys.version
]
ignore = [
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "E501",   # Line too long
  "RUF001", # String contains ambiguous symbol
  "RUF009", # Do not perform function call in dataclass defaults
  "PLC0415",# `import` should be at the top-level of a file
]

[tool.ruff.lint.isort]
known-first-party = ['libresvip', 'tests']
known-third-party = ['svg']

[tool.mypy]
python_version = "3.10"
disable_error_code = "import-not-found,import-untyped,unused-ignore"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
warn_no_return = false
no_site_packages = true
explicit_package_bases = true
plugins = [
  "pydantic.mypy"
]

[tool.pyrefly]
python-version = "3.10"

[tool.pyrefly.errors]
bad-argument-count = "ignore"
bad-argument-type = "ignore"
bad-assignment = "ignore"
bad-instantiation = "ignore"
bad-override = "ignore"
bad-return = "ignore"
bad-specialization = "ignore"
implicitly-defined-attribute = "ignore"
import-error = "ignore"
index-error = "ignore"
invalid-inheritance = "ignore"
missing-attribute = "ignore"
missing-module-attribute = "ignore"
not-iterable = "ignore"
no-matching-overload = "ignore"
unbound-name = "ignore"
unknown-name = "ignore"
unsupported-operation = "ignore"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"
